(express server): implement basic server
- add server.js file
- install express server
- add basic server in server.js file

(#013)

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -123,7 +123,7 @@ input[type=submit] {
 
 .main-menu a {
     background-color: #552F00;
-    color: #FFD9AA;
+    color: brown;
     display: block;
     height: 16px;
     padding: 12px;
